--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -5,10 +5,10 @@
       <%= link_to give_items_path, class: "btn btn-outline-warning rounded-pill", method: :get do %>
       <i class="fas fa-gift"> gift item</i>
       <% end %>
-      <%= link_to new_give_person_path, class: "btn btn-outline-danger rounded-pill", method: :get do %>
+      <%= link_to give_persons_path, class: "btn btn-outline-danger rounded-pill", method: :get do %>
       <i class="fa-solid fa-people-group "> presenter </i>
       <% end %>
-      <%= link_to new_genre_path, class: "btn btn-outline-primary rounded-pill", method: :get do %>
+      <%= link_to genres_path, class: "btn btn-outline-primary rounded-pill", method: :get do %>
       <i class="fas fa-layer-group"> genre </i>
       <% end %>
     </div>
