--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -1,25 +1,40 @@
-<h3>家族一覧</h3>
+<div class="container">
+  <div class="row">
+    <div class="col-auto">
+      <h3><i class="fas fa-layer-group"> Genre index</i></h3>
+    </div>
+  </div>
+  <div class="text-right">
+    <p>
+      <%= link_to new_genre_path, class: "btn btn-outline-warning rounded-pill", method: :get do %>
+      <i class="fas fa-layer-group"> new</i>
+      <% end %>
+    </p>
+  </div>
+</div>
 <% if flash[:notice] %>
 <p class="notice"><%= flash[:notice] %></p>
 <% end %>
 <div class="container">
   <div class="row">
-    <div class="col-auto mx-5">
-      <table class="table table-hover">
-        <thead class="thead-dark">
-          <tr>
-            <th scope="col">分類</th>
-          </tr>
-        </thead>
-        <tbody>
+    <div class="col">
+      <div class="d-grid gap-3">
+        <table class="table table-hover">
+          <thead class="table-warning">
+            <th><i class="fas fa-layer-group"> genre</i></th>
+          </thead>
           <% @genres.each do |genre| %>
           <tr>
-            <td scope="col"><%= link_to genre.genre,genre_path(genre)%></td>
+            <td><%= link_to genre.genre,genre_path(genre)%></td>
           </tr>
           <% end %>
-        </tbody>
-      </table>
-      <p><%= link_to "ホームへ戻る", root_path ,class: "btn btn-secondary"%></p>
+        </table>
+        <p><%= link_to  root_path, class: "btn btn-default rounded-pill" do %>
+          <i class="fas fa-arrow-circle-left"></i>
+          <span>back</span>
+          <% end %>
+        </p>
+      </div>
     </div>
   </div>
 </div>
