--- a/app/views/genres/new.html.erb
+++ b/app/views/genres/new.html.erb
@@ -1,27 +1,30 @@
-<div class="container mt-5">
-  <#%= render "shared/error" ,obj: @genre %>
-    <% if flash.now[:notice] %>
-    <p class="notice"><%= flash.now[:notice] %></p>
-    <% end %>
-    <div class="row">
-      <div class="col-100 mx-auto">
-        <h3>分類登録</h3>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-100 mx-auto">
-        <table class="thead-dark">
-          <%= form_with model: @genre, url: {controller: 'genres', action: 'create' }, local: true do |f| %>
-          </tr>
-          <div class="form-group">
-            <th><%= f.label :genre ,"分類" %><span class="badge badge-danger">必須</span></th>
-            <td><%= f.text_field :genre , class: "form-control"%></td>
-          </div>
-          </tr>
-        </table>
-        <p class="mt-3"><%= f.submit "登録完了" ,class: "btn btn-primary"%></p>
-        <%= link_to "ホームへ戻る", root_path ,class: "btn btn-secondary"%>
+<div class="container mb-5">
+  <i class="fas fa-layer-group fa-4x"> Genre</i>
+</div>
+<div class="row">
+  <div class="col-100 mx-auto">
+    <table class="thead-dark">
+      <%= form_with model: @genre, url: {controller: 'genres', action: 'create' }, local: true do |f| %>
+      <tr>
+        <div class="form-group">
+          <th style="width: 40%"><i class="fas fa-layer-group">　Genre</th>
+          <th style="width: 5%">
+            <div class="badge badge-danger"> required</div>
+          </th>
+          <td style="width: 55%"><%= f.text_field :genre, class: "form-control"%></td>
+        </div>
+      </tr>
+    </table>
+    <div>
+      <p class="mt-5">
+        <%= f.button :type => "submit", class: "btn btn-primary rounded-pill" do %>
+        <i class="far fa-check-circle"> save</i>
         <% end %>
-      </div>
+        <%= link_to root_path, class: "btn btn-secondary rounded-pill" do %>
+        <i class="fas fa-home"> home</i>
+        <% end %>
+      </p>
     </div>
+    <% end %>
+  </div>
 </div>
