--- a/app/views/give_persons/show.html.erb
+++ b/app/views/give_persons/show.html.erb
@@ -5,11 +5,11 @@
         <tr>
           <th>
             <div class="m-3">
-              <i class="fas fa-layer-group fa-2x"> genre : </i>
+              <i class="fa-solid fa-user fa-2x"> Presenter : </i>
             </div>
           </th>
           <td>
-            <h3><%= @genre.genre%></h3>
+            <h3><%= @give_person.give_person%></h3>
           </td>
         </tr>
       </table>
@@ -19,7 +19,7 @@
         <div class="col">
           <div class="d-grid gap-3">
             <table class="table table-hover">
-              <% @genres.each_with_index do |genre_give_item,i| %>
+              <% @give_persons.each_with_index do |give_person_give_item,i| %>
               <thead class="table-warning">
                 <tr>
                   <th>ITEM No. <%=i+1%></th>
@@ -28,23 +28,23 @@
               </thead>
               <tr>
                 <th class="border-bottom style=width 50%"><i class="fas fa-gifts"> gift</i></th>
-                <td class="border-bottom"><%= genre_give_item.product%></td>
-              </tr>
-              <tr>
-                <th><i class="fa-solid fa-user"> : from</i></th>
-                <td><%= genre_give_item.give_person.give_person %></td>
+                <td class="border-bottom"><%= give_person_give_item.product%></td>
               </tr>
               <tr>
                 <th><i class="far fa-user"> : to</i></th>
-                <td><%= genre_give_item.family_person.family_person %></td>
+                <td><%= give_person_give_item.family_person.family_person %></td>
               </tr>
               <tr>
                 <th class="border-bottom"><i class="far fa-money-bill-alt"> amount</i></th>
-                <td class="border-bottom"><%= genre_give_item.price %></td>
+                <td class="border-bottom"><%= give_person_give_item.price %></td>
               </tr>
               <tr>
                 <th><i class="far fa-comment-dots"> reason</i></th>
-                <td class="border-bottom"><%= genre_give_item.reason %></td>
+                <td class="border-bottom"><%= give_person_give_item.reason %></td>
+              </tr>
+              <tr>
+                <th><i class="far fa-calendar-alt"> date</i></th>
+                <td><%= give_person_give_item.give_day %></td>
               </tr>
               <% end %>
             </table>
@@ -52,7 +52,7 @@
         </div>
         <div class="container">
           <p>
-            <%= link_to  genres_path, class: "btn btn-default rounded-pill" do %>
+            <%= link_to  give_persons_path, class: "btn btn-default rounded-pill" do %>
             <i class="fas fa-arrow-circle-left"></i>
             <span>back</span>
             <% end %>
