--- a/app/views/give_items/new.html.erb
+++ b/app/views/give_items/new.html.erb
@@ -5,4 +5,4 @@
     <% end %>
     <i class="fas fa-gift fa-3x"> gift</i>
 </div>
-<%= render "give_items/form" %>
+<%= render "give_items/give_item_form" %>
