--- a/app/views/give_persons/index.html.erb
+++ b/app/views/give_persons/index.html.erb
@@ -36,7 +36,7 @@
             <td><%= give_person.involvement %></td>
           </tr>
           <tr>
-            <th><i class="far fa-calendar-check"></i> Registration date</th>
+            <th><i class="far fa-calendar-check"> date</i></th>
             <td><%= give_person.created_at.to_s(:date_jp)%></td>
           </tr>
           <tr>
