giveperson familyperson edit追加

--- a/app/views/family_persons/edit.html.erb
+++ b/app/views/family_persons/edit.html.erb
@@ -2,6 +2,6 @@
   <% if flash.now[:notice] %>
   <p class="notice"><%= flash.now[:notice] %></p>
   <% end %>
-  <i class="fas fa-layer-group fa-4x"> new_genre</i>
+  <i class=" fa-solid fa-users fa-4x"> Edit_Family</i>
 </div>
-<%= render "genres/genre_form" %>
+<%= render "family_persons/family_person_form" %>
