--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -16,11 +16,11 @@
       <%= link_to sent_items_path, class: "btn btn-outline-info rounded-pill", method: :get do %>
       <i class="fas fa-gift"> sent item</i>
       <% end %>
-      <%= link_to new_family_person_path, class: "btn btn-outline-success rounded-pill", method: :get do %>
-      <i class=" fa-solid fa-users"> family </i>
+      <%= link_to new_genre_path, class: "btn btn-outline-secondary rounded-pill", method: :get do %>
+      <i class="fas fa-user-friends"> senter</i>
       <% end %>
-      <%= link_to new_genre_path, class: "btn btn-outline-dark rounded-pill", method: :get do %>
-      <i class="far fa-calendar-check"> calendar </i>
+      <%= link_to family_persons_path, class: "btn btn-outline-success rounded-pill", method: :get do %>
+      <i class=" fa-solid fa-users"> family </i>
       <% end %>
     </div>
   </div>
