--- a/app/views/genres/_genre_form.html.erb
+++ b/app/views/genres/_genre_form.html.erb
@@ -1,28 +1,23 @@
 <div class="row">
   <div class="col-100 mx-auto">
     <table class="thead-dark">
-      <%= form_with model: @give_person, local: true do |f| %>
+      <%= form_with model: @genre,local: true do |f| %>
       <tr>
         <div class="form-group">
-          <th style="width: 40%"><i class="fa-solid fa-user">　presenter</th>
+          <th style="width: 40%"><i class="fas fa-layer-group">　Genre</th>
           <th style="width: 5%">
             <div class="badge badge-danger"> required</div>
           </th>
-          <td style="width: 55%"><%= f.text_field :give_person, class: "form-control"%></td>
-        </div>
-      </tr>
-      <tr>
-        <div class="form-group">
-          <th style="width: 40%"><i class="far fa-handshake"> Connection</i></th>
-          <th style="width: 5%">
-            <div class="badge badge-danger"> required</div>
-          </th>
-          <td style="width: 55%"><%= f.text_field :involvement, class: "form-control"%></td>
+          <td style="width: auto"><%= f.text_field :genre, class: "form-control"%></td>
         </div>
       </tr>
     </table>
     <div>
       <p class="mt-5">
+        <%= link_to  genres_path, class: "btn btn-default rounded-pill" do %>
+        <i class="fas fa-arrow-circle-left"></i>
+        <span>back</span>
+        <% end %>
         <%= f.button :type => "submit", class: "btn btn-primary rounded-pill" do %>
         <i class="far fa-check-circle"> save</i>
         <% end %>
@@ -33,5 +28,4 @@
     </div>
     <% end %>
   </div>
-</div>
 </div>
