--- a/app/views/give_items/index.html.erb
+++ b/app/views/give_items/index.html.erb
@@ -56,6 +56,7 @@
             <td>
               <% if give_item.have_return? %>
               <%= link_to give_item.give_returns[0].product,give_return_path(give_item.give_returns[0]) %>
+              <%= link_to new_give_return_path(give_item) %>
               <% else %>
               <%= link_to new_give_return_path(give_item), class: "btn btn-outline-warning rounded-pill", method: :get do %>
               <i class="fas fa-gift"> return item</i>
