--- a/app/views/sent_items/index.html.erb
+++ b/app/views/sent_items/index.html.erb
@@ -1,2 +1,97 @@
-<h1>SentItems#index</h1>
-<p>Find me in app/views/sent_items/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-auto">
+      <h3><i class="fas fa-gifts"> sent index</i></h3>
+    </div>
+  </div>
+  <div class="text-right">
+    <p>
+      <%= link_to new_sent_item_path, class: "btn btn-outline-warning rounded-pill", method: :get do %>
+      <i class="fas fa-gift"> new</i>
+      <% end %>
+    </p>
+  </div>
+</div>
+<% if flash[:notice] %>
+<p class="notice"><%= flash[:notice] %></p>
+<% end %>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <div class="d-grid gap-3">
+        <table class="table table-hover">
+          <% @sent_items.each_with_index do |sent_item,i| %>
+          <thead class="table-warning">
+            <tr>
+              <th>ITEM No. <%=i+1%></th>
+              <th></th>
+            </tr>
+          </thead>
+          <tr>
+            <th><i class="fas fa-gifts"> gift</i></th>
+            <td><%= link_to sent_item.product,sent_item_path(sent_item)%></td>
+          </tr>
+          <tr>
+            <th><i class="fa-solid fa-user"> : from</i></th>
+            <td><%= sent_item.sent_person.sent_person %></td>
+          </tr>
+          <tr>
+            <th><i class="far fa-user"> : to</i></th>
+            <td><%= sent_item.family_person.family_person %></td>
+          </tr>
+          <tr>
+            <th><i class="far fa-money-bill-alt"> amount</i></th>
+            <td><%= sent_item.price %></td>
+          </tr>
+          <tr>
+            <th><i class="far fa-comment-dots"> reason</i></th>
+            <td><%= sent_item.reason %></td>
+          </tr>
+          <tr>
+            <th><i class="far fa-calendar-alt"> date</i></th>
+            <td><%= sent_item.sent_day %></td>
+          </tr>
+          <tr>
+            <th><i class="fas fa-reply"></i><i class="fas fa-gift"> return item</i></th>
+            <td>
+              <% if sent_item.have_return? %>
+              <%= link_to sent_item.sent_returns[0].product,sent_return_path(sent_item.sent_returns[0]) %>
+              <%= link_to new_sent_return_path(sent_item) %>
+              <% else %>
+              <%= link_to new_sent_return_path(sent_item), class: "btn btn-outline-warning rounded-pill", method: :get do %>
+              <i class="fas fa-gift"> return item</i>
+              <% end %>
+              <% end %>
+            </td>
+          </tr>
+          <tr>
+            <th><i class="fas fa-reply"></i><i class="far fa-money-bill-alt"> return amount</i></th>
+            <td>
+              <% if sent_item.have_return? %>
+              <%= sent_item.sent_returns[0].price %>
+              <% else %>
+              <p>no return amount</p>
+              <% end %>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <%= link_to edit_sent_item_path(sent_item),class: "btn btn-outline-dark, rounded-circle btn-lg", method: :get do %>
+              <i class="far fa-edit"></i>
+              <% end %>
+              <%= link_to sent_item_path(sent_item),class: "btn btn-danger rounded-circle btn-lg", method: :delete, data: { confirm: "本当に削除しますか？" } do %>
+              <i class="far fa-trash-alt fa-1x"></i>
+              <% end %></td>
+            <% end %>
+            <td></td>
+          </tr>
+        </table>
+        <p><%= link_to  root_path, class: "btn btn-default rounded-pill" do %>
+          <i class="fas fa-arrow-circle-left"></i>
+          <span>back</span>
+          <% end %>
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
