--- a/app/views/family_persons/index.html.erb
+++ b/app/views/family_persons/index.html.erb
@@ -40,7 +40,8 @@
           </tr>
           <% end %>
         </table>
-        <p><%= link_to  root_path, class: "btn btn-default rounded-pill" do %>
+        <p>
+          <%= link_to  root_path, class: "btn btn-default rounded-pill" do %>
           <i class="fas fa-arrow-circle-left"></i>
           <span>back</span>
           <% end %>
