--- a/app/views/sent_persons/_sent_person_form.html.erb
+++ b/app/views/sent_persons/_sent_person_form.html.erb
@@ -1,22 +1,14 @@
-<div class="container">
-  <div class="row">
-    <% if flash.now[:notice] %>
-    <p class="notice"><%= flash.now[:notice] %></p>
-    <% end %>
-    <h3>give_pserson edit</h3>
-  </div>
-</div>
 <div class="row">
   <div class="col-100 mx-auto">
     <table class="thead-dark">
-      <%= form_with model: @give_person, local: true do |f| %>
+      <%= form_with model: @sent_person, url: {controller: 'sent_persons', action: 'create' } , local: true do |f| %>
       <tr>
         <div class="form-group">
-          <th style="width: 40%"><i class="fa-solid fa-user">　presenter</th>
+          <th style="width: 40%"><i class="fa-solid fa-user">　senter</th>
           <th style="width: 5%">
             <div class="badge badge-danger"> required</div>
           </th>
-          <td style="width: 55%"><%= f.text_field :give_person, class: "form-control"%></td>
+          <td style="width: 55%"><%= f.text_field :sent_person, class: "form-control"%></td>
         </div>
       </tr>
       <tr>
