--- a/app/views/sent_persons/edit.html.erb
+++ b/app/views/sent_persons/edit.html.erb
@@ -3,20 +3,20 @@
     <% if flash.now[:notice] %>
     <p class="notice"><%= flash.now[:notice] %></p>
     <% end %>
-    <h3>give_pserson edit</h3>
+    <h3>Sent_pserson edit</h3>
   </div>
 </div>
 <div class="row">
   <div class="col-100 mx-auto">
     <table class="thead-dark">
-      <%= form_with model: @give_person, local: true do |f| %>
+      <%= form_with model: @sent_person, local: true do |f| %>
       <tr>
         <div class="form-group">
-          <th style="width: 40%"><i class="fa-solid fa-user">　presenter</th>
+          <th style="width: 40%"><i class="fa-solid fa-user">　senter</th>
           <th style="width: 5%">
             <div class="badge badge-danger"> required</div>
           </th>
-          <td style="width: 55%"><%= f.text_field :give_person, class: "form-control"%></td>
+          <td style="width: 55%"><%= f.text_field :sent_person, class: "form-control"%></td>
         </div>
       </tr>
       <tr>
@@ -31,6 +31,10 @@
     </table>
     <div>
       <p class="mt-5">
+        <%= link_to  sent_persons_path, class: "btn btn-default rounded-pill" do %>
+        <i class="fas fa-arrow-circle-left"></i>
+        <span>back</span>
+        <% end %>
         <%= f.button :type => "submit", class: "btn btn-primary rounded-pill" do %>
         <i class="far fa-check-circle"> save</i>
         <% end %>
