--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -1,27 +1,28 @@
 <h1>GIVE & SENT</h1>
 <div class="container">
-  <div class="row">
-    <div class="col-sm-6">
-      <%= link_to give_items_path, class: "btn btn-outline-warning rounded-pill", method: :get do %>
-      <i class="fas fa-gift"> gift item</i>
-      <% end %>
-      <%= link_to give_persons_path, class: "btn btn-outline-danger rounded-pill", method: :get do %>
-      <i class="fa-solid fa-people-group "> presenter </i>
-      <% end %>
-      <%= link_to genres_path, class: "btn btn-outline-primary rounded-pill", method: :get do %>
-      <i class="fas fa-layer-group"> genre </i>
-      <% end %>
-    </div>
-    <div class="col-sm-6">
-      <%= link_to sent_items_path, class: "btn btn-outline-info rounded-pill", method: :get do %>
-      <i class="fas fa-gift"> sent item</i>
-      <% end %>
-      <%= link_to new_genre_path, class: "btn btn-outline-secondary rounded-pill", method: :get do %>
-      <i class="fas fa-user-friends"> senter</i>
-      <% end %>
-      <%= link_to family_persons_path, class: "btn btn-outline-success rounded-pill", method: :get do %>
-      <i class=" fa-solid fa-users"> family </i>
-      <% end %>
-    </div>
+  <div class="row justify-content-around">
+    <%= link_to give_items_path, class: "btn btn-outline-warning rounded-pill", method: :get do %>
+    <i class="fas fa-gift"> gift item</i>
+    <% end %>
+    <%= link_to give_persons_path, class: "btn btn-outline-danger rounded-pill", method: :get do %>
+    <i class="fa-solid fa-people-group "> presenter </i>
+    <% end %>
   </div>
+  <div class="row justify-content-around">
+    <%= link_to genres_path, class: "btn btn-outline-primary rounded-pill", method: :get do %>
+    <i class="fas fa-layer-group"> genre </i>
+    <% end %>
+    <%= link_to sent_items_path, class: "btn btn-outline-info rounded-pill", method: :get do %>
+    <i class="fas fa-gift"> sent item</i>
+    <% end %>
+  </div>
+  <div class="row justify-content-around">
+    <%= link_to sent_persons_path, class: "btn btn-outline-secondary rounded-pill", method: :get do %>
+    <i class="fas fa-user-friends"> senter</i>
+    <% end %>
+    <%= link_to family_persons_path, class: "btn btn-outline-success rounded-pill", method: :get do %>
+    <i class=" fa-solid fa-users"> family </i>
+    <% end %>
+  </div>
+</div>
 </div>
