--- a/app/views/sent_items/index.html.erb
+++ b/app/views/sent_items/index.html.erb
@@ -32,6 +32,10 @@
             <td><%= link_to sent_item.product,sent_item_path(sent_item)%></td>
           </tr>
           <tr>
+            <th><i class="far fa-user"> : from</i></th>
+            <td><%= sent_item.family_person.family_person %></td>
+          </tr>
+          <tr>
             <th><i class="fa-solid fa-user"> : to</i></th>
             <td><%= sent_item.sent_person.sent_person %></td>
           </tr>
