sentitem new show 作成

--- a/app/assets/stylesheets/give_items.scss
+++ b/app/assets/stylesheets/give_items.scss
@@ -21,3 +21,10 @@
     border-radius: 100px;
     object-fit: cover;
 }
+
+.icon_image {
+  width: 30px;
+  height: 30px;
+  border-radius: 15px;
+  object-fit: cover;
+}
