--- a/app/views/give_items/_give_item_form.html.erb
+++ b/app/views/give_items/_give_item_form.html.erb
@@ -93,6 +93,10 @@
       </tr>
     </table>
     <p class="mt-3">
+      <%= link_to  give_items_path, class: "btn btn-default rounded-pill" do %>
+      <i class="fas fa-arrow-circle-left"></i>
+      <span>back</span>
+      <% end %>
       <%= f.button :type => "submit", class: "btn btn-primary rounded-pill" do %>
       <i class="far fa-check-circle"> save</i>
       <% end %>
@@ -102,5 +106,4 @@
     </p>
     <% end %>
   </div>
-</div>
 </div>
