--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -1,4 +1,6 @@
-<h1>GIVE & SENT</h1>
+<div class="col-100 mx-auto">
+  <h1>GIVE & SENT</h1>
+</div>
 <div class="container">
   <div class="row justify-content-around">
     <%= link_to give_items_path, class: "btn btn-outline-warning rounded-pill", method: :get do %>
