--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -6,7 +6,7 @@
   </div>
   <div class="text-right">
     <p>
-      <%= link_to new_genre_path, class: "btn btn-outline-warning rounded-pill", method: :get do %>
+      <%= link_to new_genre_path, class: "btn btn-outline-primary rounded-pill", method: :get do %>
       <i class="fas fa-layer-group"> new</i>
       <% end %>
     </p>
@@ -20,7 +20,7 @@
     <div class="col">
       <div class="d-grid gap-3">
         <table class="table table-hover">
-          <thead class="table-warning">
+          <thead class="table-primary">
             <th><i class="fas fa-layer-group"> genre</i></th>
             <th></th>
           </thead>
