--- a/app/views/family_persons/index.html.erb
+++ b/app/views/family_persons/index.html.erb
@@ -6,7 +6,7 @@
   </div>
   <div class="text-right">
     <p>
-      <%= link_to new_family_person_path, class: "btn btn-outline-warning rounded-pill", method: :get do %>
+      <%= link_to new_family_person_path, class: "btn btn-outline-success rounded-pill", method: :get do %>
       <i class=" fa-solid fa-users"> new</i>
       <% end %>
     </p>
@@ -20,7 +20,7 @@
     <div class="col">
       <div class="d-grid gap-3">
         <table class="table table-hover">
-          <thead class="table-warning">
+          <thead class="table-success">
             <th><i class=" fa-solid fa-users"> family</i>
             </th>
             <th></th>
