--- a/app/views/sent_items/index.html.erb
+++ b/app/views/sent_items/index.html.erb
@@ -6,7 +6,7 @@
   </div>
   <div class="text-right">
     <p>
-      <%= link_to new_sent_item_path, class: "btn btn-outline-warning rounded-pill", method: :get do %>
+      <%= link_to new_sent_item_path, class: "btn btn-outline-info rounded-pill", method: :get do %>
       <i class="fas fa-gift"> new</i>
       <% end %>
     </p>
@@ -21,7 +21,7 @@
       <div class="d-grid gap-3">
         <table class="table table-hover">
           <% @sent_items.each_with_index do |sent_item,i| %>
-          <thead class="table-warning">
+          <thead class="table-info">
             <tr>
               <th>ITEM No. <%=i+1%></th>
               <th></th>
@@ -51,40 +51,42 @@
             <th><i class="far fa-calendar-alt"> date</i></th>
             <td><%= sent_item.sent_day %></td>
           </tr>
+          <% if sent_item.have_return? %>
+          <% sent_item.sent_returns.each do |sent_item_return| %>
           <tr>
-            <th><i class="fas fa-reply"></i><i class="fas fa-gift"> return item</i></th>
-            <td>
-              <% if sent_item.have_return? %>
-              <%= link_to sent_item.sent_returns[0].product,sent_return_path(sent_item.sent_returns[0]) %>
-              <%= link_to new_sent_return_path(sent_item) %>
-              <% else %>
-              <%= link_to new_sent_return_path(sent_item), class: "btn btn-outline-warning rounded-pill", method: :get do %>
+            <th class="border-bottom"><i class="fas fa-reply"></i><i class="fas fa-gift"> return item</i></th>
+            <td class="border-bottom">
+              <%= link_to sent_item_return.product, sent_return_path(sent_item_return) %>
+            </td>
+          </tr>
+          <tr>
+            <th class="border-bottom"><i class="fas fa-reply"></i><i class="far fa-money-bill-alt"> return amount</i>
+            </th>
+            <td class="border-bottom">
+              <%= sent_item_return.price %>
+            </td>
+          <tr>
+            <% end %>
+            <% end %>
+          <tr>
+          <tr>
+            <th>
+              <%= link_to new_sent_return_path(sent_item), class: "btn btn-outline-info rounded-pill", method: :get do %>
               <i class="fas fa-gift"> return item</i>
               <% end %>
-              <% end %>
-            </td>
-          </tr>
-          <tr>
-            <th><i class="fas fa-reply"></i><i class="far fa-money-bill-alt"> return amount</i></th>
-            <td>
-              <% if sent_item.have_return? %>
-              <%= sent_item.sent_returns[0].price %>
-              <% else %>
-              <p>no return amount</p>
-              <% end %>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <%= link_to edit_sent_item_path(sent_item),class: "btn btn-outline-dark, rounded-circle btn-lg", method: :get do %>
-              <i class="far fa-edit"></i>
-              <% end %>
-              <%= link_to sent_item_path(sent_item),class: "btn btn-danger rounded-circle btn-lg", method: :delete, data: { confirm: "本当に削除しますか？" } do %>
-              <i class="far fa-trash-alt fa-1x"></i>
-              <% end %></td>
-            <% end %>
+            </th>
             <td></td>
           </tr>
+          <td>
+            <%= link_to edit_sent_item_path(sent_item),class: "btn btn-outline-dark, rounded-circle btn-lg", method: :get do %>
+            <i class="far fa-edit"></i>
+            <% end %>
+            <%= link_to sent_item_path(sent_item),class: "btn btn-danger rounded-circle btn-lg", method: :delete, data: { confirm: "本当に削除しますか？" } do %>
+            <i class="far fa-trash-alt fa-1x"></i>
+            <% end %></td>
+          <td></td>
+          </tr>
+          <% end %>
         </table>
         <p><%= link_to  root_path, class: "btn btn-default rounded-pill" do %>
           <i class="fas fa-arrow-circle-left"></i>
