--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
 </head>
 <header>
   <nav class="navbar navbar-light bg-light">
-    <%= link_to 'give__sent', root_path, class: "navbar-brand" %>
+    <%= link_to 'GIVE & SENT', root_path, class: "navbar-brand" %>
     <% if user_signed_in? %>
     <div class="d-flex justify-content-start mb-2">
       <div class="ml-auto">
