--- a/app/assets/stylesheets/tops.scss
+++ b/app/assets/stylesheets/tops.scss
@@ -2,5 +2,16 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 .row{
-    padding:50px 0px 20px 0px;
+  padding:50px 0px 50px 0px;
+}
+
+.bg {
+  background-image: image-url('sky_03_b.jpeg');
+  height: 150%;
+  background-size:cover;
+}
+
+h1{
+  color: aliceblue;
+  padding: 50px 0px 50px 0px;
 }
