--- a/app/views/give_items/show.html.erb
+++ b/app/views/give_items/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container mb-5">
-  <i class="fas fa-search-plus fa-4x"> detail</i>
+  <i class="far fa-flag fa-4x"> detail</i>
 </div>
 <div class="container">
   <div class="row">
