--- a/app/views/give_returns/show.html.erb
+++ b/app/views/give_returns/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container mb-5">
-  <i class="fas fa-search-plus fa-4x"> detail</i>
+  <i class="far fa-flag fa-4x"> detail</i>
 </div>
 <div class="container">
   <div class="row">
@@ -45,6 +45,14 @@
             <td class="border-bottom"><%= @give_return.product%></td>
           </tr>
           <tr>
+            <th class="border-bottom style=width 50%"><i class="far fa-user"> : from</i></th>
+            <td class="border-bottom"><%= @give_return.give_item.family_person.family_person %></td>
+          </tr>
+          <tr>
+            <th class="border-bottom style=width 50%"><i class="fa-solid fa-user"> : to</i></th>
+            <td class="border-bottom"><%= @give_return.give_item.give_person.give_person %></td>
+          </tr>
+          <tr>
             <th class="border-bottom"><i class="fas fa-layer-group"> genre</i></th>
             <td class="border-bottom"><%= @give_return.give_item.genre.genre %></td>
           </tr>
@@ -65,10 +73,6 @@
     </div>
     <div class="container">
       <p>
-        <%= link_to  give_items_path, class: "btn btn-default rounded-pill" do %>
-        <i class="fas fa-arrow-circle-left"></i>
-        <span>back</span>
-        <% end %>
         <%= link_to root_path, class: "btn btn-secondary rounded-pill" do %>
         <i class="fas fa-home"> home</i>
         <% end %>
