--- a/app/views/sent_returns/index.html.erb
+++ b/app/views/sent_returns/index.html.erb
@@ -1,2 +1,63 @@
-<h1>GiveReturns#index</h1>
-<p>Find me in app/views/give_returns/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-auto">
+      <h3><i class="fas fa-gifts"> sent return item index</i></h3>
+    </div>
+  </div>
+</div>
+<% if flash[:notice] %>
+<p class="notice"><%= flash[:notice] %></p>
+<% end %>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <div class="d-grid gap-3">
+        <table class="table table-hover">
+          <% @sent_returns.each_with_index do |sent_return,i| %>
+          <thead class="table-warning">
+            <tr>
+              <th> RETURN ITEM No. <%=i +1 %></th>
+              <th></th>
+            </tr>
+          </thead>
+          <tr>
+            <th><i class="fas fa-gifts"> gift</i></th>
+            <td><%= link_to sent_return.product,sent_return_path(sent_return)%></td>
+          </tr>
+          <tr>
+            <th><i class="far fa-user"> : from</i></th>
+            <td><%= sent_return.sent_item.family_person.family_person %></td>
+          </tr>
+          <tr>
+            <th><i class="fa-solid fa-user"> : from</i></th>
+            <td><%= sent_return.sent_item.sent_person.sent_person %></td>
+          </tr>
+          <tr>
+            <th><i class="far fa-money-bill-alt"> amount</i></th>
+            <td><%= sent_return.price %></td>
+          </tr>
+          <tr>
+            <th><i class="far fa-calendar-alt"> date</i></th>
+            <td><%= sent_return.return_day %></td>
+          </tr>
+          <tr>
+            <td>
+              <%= link_to edit_sent_return_path(sent_return),class: "btn btn-outline-dark, rounded-circle btn-lg", method: :get do %>
+              <i class="far fa-edit"></i>
+              <% end %>
+              <%= link_to sent_return_path(sent_return),class: "btn btn-danger rounded-circle btn-lg", method: :delete, data: { confirm: "本当に削除しますか？" } do %>
+              <i class="far fa-trash-alt fa-1x"></i>
+              <% end %></td>
+            <td></td>
+          </tr>
+          <% end %>
+        </table>
+        <p><%= link_to  root_path, class: "btn btn-default rounded-pill" do %>
+          <i class="fas fa-arrow-circle-left"></i>
+          <span>back</span>
+          <% end %>
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
