--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -1,29 +1,29 @@
 <div class="bg">
-  <div class="col-100 mx-auto">
+  <div class="mx-auto" style="width: 250px;">
     <h1>GIVE & SENT</h1>
   </div>
   <div class="container">
     <div class="row justify-content-around">
-      <%= link_to give_items_path, class: "btn btn-outline-warning rounded-pill", method: :get do %>
+      <%= link_to give_items_path, class: "btn btn-warning rounded-pill", method: :get do %>
       <i class="fas fa-gift"> gift item</i>
       <% end %>
-      <%= link_to sent_items_path, class: "btn btn-outline-info rounded-pill", method: :get do %>
+      <%= link_to sent_items_path, class: "btn btn-info rounded-pill", method: :get do %>
       <i class="fas fa-gift"> sent item</i>
       <% end %>
     </div>
     <div class="row justify-content-around">
-      <%= link_to give_persons_path, class: "btn btn-outline-danger rounded-pill", method: :get do %>
+      <%= link_to give_persons_path, class: "btn btn-danger rounded-pill", method: :get do %>
       <i class="fa-solid fa-people-group "> presenter </i>
       <% end %>
-      <%= link_to sent_persons_path, class: "btn btn-outline-secondary rounded-pill", method: :get do %>
+      <%= link_to sent_persons_path, class: "btn btn-secondary rounded-pill", method: :get do %>
       <i class="fas fa-user-friends"> senter</i>
       <% end %>
     </div>
     <div class="row justify-content-around">
-      <%= link_to family_persons_path, class: "btn btn-outline-success rounded-pill", method: :get do %>
+      <%= link_to family_persons_path, class: "btn btn-success rounded-pill", method: :get do %>
       <i class=" fa-solid fa-users"> family </i>
       <% end %>
-      <%= link_to genres_path, class: "btn btn-outline-primary rounded-pill", method: :get do %>
+      <%= link_to genres_path, class: "btn btn-primary rounded-pill", method: :get do %>
       <i class="fas fa-layer-group"> genre </i>
       <% end %>
     </div>
